@@ -6,6 +6,15 @@ New in v0.7.12 (2017/01/??)
   - Duplicity fails on MacOS because GPG version parsing fails
 * Fixed bug #1655268 "--gpg-binary option not working"
   - If gpg binary is specified rebuild gpg profile using new binary location
+* Fixed bug #1658283 "Duplicity 0.7.11 broken with GnuPG 2.0"
+  - Made gpg version check more robust than just major version
+  - Now use --pinentry-mode=loopback on gpg 2.1 and greater
+  - Removed check for non-Linux systems, a false problem
+* Merged in lp:~matthew-t-bentley/duplicity/duplicity
+  - Sets a user agent. Backblaze asked for this in case there are errors that originate
+    from the Duplicity B2 backend
+  - Only retrieves a new upload URL when the current one expires, to bring it in line
+    with their best practices for integrations: https://www.backblaze.com/b2/docs/integration_checklist.html
 
 
 New in v0.7.11 (2016/12/31)
